<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ApkManager</string>
	<string name="search">Search</string>
	<string name="not_permission">Not permission information</string>
	<string name="settings">Settings</string>
    <string name="open">Open</string>
	<string name="remove">Uninstall</string>
	<string name="share">Share</string>
	<string name="details">Details</string>
	<string name="installed_from_gp">Installed from GooglePlay</string>
	<string name="not_installed_from_gp">Unknown source</string>
	<string name="not_installed_app">Application not installed</string>
	<string name="information">Information</string>
	<string name="version">Version</string>
	<string name="version_code">Version code</string>
	<string name="install_time">Install time</string>
	<string name="last_update_time">Last update time</string>
	<string name="size">Size</string>
	<string name="type_app">Type app</string>
	<string name="type_app_system">System</string>
	<string name="type_app_not_system">Users</string>
	<string name="all_permissions">All permissions</string>
	<string name="developer">Developer</string>
	<string name="kb">KB</string>
	<string name="mb">MB</string>
	<string name="gb">GB</string>
	<string name="free_size">Free</string>
	<string name="total_size">Total</string>
	<string name="developer_info">We do not claim that the developer name is correct.</string>
	<string name="app">Installed</string>
	<string name="apk">Files</string>
	
	<string name="theme">Theme</string>
	<string name="list">List</string>
	<string name="system">System</string>
	<string name="system_app">System apps</string>
	<string name="about">About</string>
	<string name="app_version">ApkShare Version</string>
	<string name="library">Libraries</string>
	
	<string name="theme_desc">Choose theme for app</string>
	<string name="list_desc">Choose type list</string>
	<string name="system_app_desc">Show system list apps</string>
	<string name="app_version_desc">Version %1$s</string>
	<string name="library_desc">List of all libraries used in the application</string>
	
	<string-array name="theme_list">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
	<string-array name="theme_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
	
	<string-array name="list_list">
        <item>List</item>
        <item>Table</item>
    </string-array>
	<string-array name="list_value">
        <item>1</item>
        <item>2</item>
    </string-array>
	
</resources>
