<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:maxWidth="360dp"
		android:gravity="center">

		<ImageView
			android:id="@+id/imgOpen"
			android:layout_height="55dp"
			android:layout_width="55dp"
			android:tint="#9E9E9E"
			android:src="@drawable/ic_run"
			android:background="@drawable/tab_b"
			android:padding="10dp"
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"/>

		<ImageView
			android:id="@+id/imgDelete"
			android:layout_height="55dp"
			android:layout_width="55dp"
			android:tint="#9E9E9E"
			android:src="@drawable/ic_delete"
			android:background="@drawable/tab_b"
			android:padding="16dp"
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"/>

		<ImageView
			android:id="@+id/imgSettings"
			android:layout_height="55dp"
			android:layout_width="55dp"
			android:tint="#9E9E9E"
			android:src="@drawable/ic_settings"
			android:background="@drawable/tab_b"
			android:padding="15dp"
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"/>

		<ImageView
			android:id="@+id/imgShare"
			android:layout_height="55dp"
			android:layout_width="55dp"
			android:tint="#9E9E9E"
			android:src="@drawable/ic_share"
			android:background="@drawable/tab_b"
			android:padding="16dp"
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"/>

		<ImageView
			android:id="@+id/imgDetails"
			android:layout_height="55dp"
			android:layout_width="55dp"
			android:tint="#9E9E9E"
			android:src="@drawable/round_menu_black_48"
			android:background="@drawable/tab_b"
			android:padding="13dp"
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="center"
		android:layout_marginTop="7dp">

		<TextView
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"
			android:layout_height="wrap_content"
			android:layout_width="55dp"
			android:textColor="#9e9e9e"
			android:text="@string/open"
			android:gravity="center"
			android:textSize="11sp"
			android:singleLine="true"/>

		<TextView
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"
			android:layout_height="wrap_content"
			android:layout_width="55dp"
			android:textColor="#9e9e9e"
			android:text="@string/remove"
			android:gravity="center"
			android:textSize="11sp"
			android:singleLine="true"/>

		<TextView
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"
			android:layout_height="wrap_content"
			android:layout_width="55dp"
			android:textColor="#9e9e9e"
			android:text="@string/settings"
			android:gravity="center"
			android:textSize="11sp"
			android:singleLine="true"/>

		<TextView
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"
			android:layout_height="wrap_content"
			android:layout_width="55dp"
			android:textColor="#9e9e9e"
			android:text="@string/share"
			android:gravity="center"
			android:textSize="11sp"
			android:singleLine="true"/>

		<TextView
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"
			android:layout_height="wrap_content"
			android:layout_width="55dp"
			android:textColor="#9e9e9e"
			android:text="@string/details"
			android:gravity="center"
			android:textSize="11sp"
			android:singleLine="true"/>

	</LinearLayout>

</LinearLayout>

